k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: marimo-erp
  labels:
    name: marimo-erp
    environment: production
